# nx

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Directory.Build.props  Directory.Packages.props  Expand-Template.ps1  Library.sln  NX.sln  README.md  global.json  init.ps1  nuget.config  nx-example-scratchpad.md  nx-grammar-spec.md  nx-grammar.md  nx-planning-future.md  nx-planning.md  nx-rust-plan.md  plan-review.md  review.md  skills-lock.json
.claude/skills/: openspecex-review  openspecex-review-fix  openspecex-review-verify
.config/: dotnet-tools.json
.github/: copilot-instructions.md
.github/workflows/: build.yml  deploy-docs.yml  vscode-extension.yml
.specify/memory/: constitution.md
.speckit/: config.yml
bindings/c/: README.md  nx.h
bindings/csharp/: Directory.Packages.props  README.md
bindings/dotnet/: Directory.Packages.props  NxLang.sln  README.md
crates/: README.md
crates/nx-api/: Cargo.toml
crates/nx-api/src/: artifacts.rs  component.rs  diagnostics.rs  eval.rs  lib.rs  source_graph.rs  value.rs  workspace.rs
crates/nx-cli/: Cargo.toml
crates/nx-cli/src/: codegen.rs  format.rs  json.rs  main.rs
crates/nx-cli/src/codegen/: editorconfig.rs  languages.rs  model.rs  options.rs  writer.rs
crates/nx-cli/src/codegen/languages/: csharp.rs  typescript.rs
crates/nx-diagnostics/: Cargo.toml
crates/nx-diagnostics/src/: diagnostic.rs  lib.rs  render.rs
crates/nx-diagnostics/tests/: render_tests.rs
crates/nx-ffi/: Cargo.toml  cbindgen.toml
crates/nx-ffi/src/: lib.rs
crates/nx-ffi/tests/: ffi_smoke.rs
crates/nx-hir/: Cargo.toml
crates/nx-hir/src/: components.rs  db.rs  import_resolution.rs  lib.rs  link.rs  lower.rs  prepared.rs  records.rs  scope.rs  unions.rs
crates/nx-hir/src/ast/: expr.rs  mod.rs  stmt.rs  types.rs
crates/nx-interpreter/: Cargo.toml
crates/nx-interpreter/examples/: error_demo.rs
crates/nx-interpreter/src/: context.rs  error.rs  interpreter.rs  lib.rs  resolved_program.rs  value.rs
crates/nx-interpreter/src/eval/: arithmetic.rs  control.rs  functions.rs  logical.rs  mod.rs
crates/nx-interpreter/tests/: arrays.rs  conditionals.rs  edge_cases.rs  error_handling.rs  floats.rs  interpreter_direct_hir.rs  loops.rs  operators.rs  recursion.rs  resolved_program.rs  simple_functions.rs
crates/nx-syntax/: .gitignore  Cargo.toml  binding.gyp  build.rs  grammar.js  package-lock.json  package.json  pnpm-lock.yaml
crates/nx-syntax/benches/: parse_benchmark.rs
crates/nx-syntax/bindings/node/: binding.cc  index.js
crates/nx-syntax/bindings/rust/: lib.rs
crates/nx-syntax/queries/: highlights.scm  locals.scm
crates/nx-syntax/src/: ast.rs  grammar.json  lib.rs  node-types.json  parser.c  scanner.c  syntax_kind.rs  syntax_node.rs  validation.rs
crates/nx-syntax/tests/: parser_tests.rs  performance_tests.rs  tree_helpers.rs
crates/nx-syntax/tests/fixtures/invalid/: action-inheritance-multiple-bases.nx  action-invalid-declaration.nx  braced-value-sequence-requires-parens.nx  component-abstract-body.nx  component-concrete-bodyless.nx  component-external-body.nx  component-external-duplicate-state.nx  component-external-empty-body.nx  component-inheritance-multiple-bases.nx  component-invalid-emits-reference.nx  component-invalid-emits.nx  component-invalid-state.nx  contenttype-after-import.nx  import-without-from.nx  incomplete-expression.nx  incomplete_expression.nx  invalid-element.nx  invalid_element.nx  mismatched_tags.nx  missing-parenthesis.nx  missing_parenthesis.nx  multiple-errors.nx  multiple-top-level-elements.nx  multiple_errors.nx  record-inheritance-multiple-bases.nx  unclosed-brace.nx  unclosed_brace.nx  union-duplicate-cases.nx  union-empty-case-list.nx  union-invalid-extends-clause.nx  union-malformed-case-payload.nx  union-missing-leading-pipe.nx
crates/nx-syntax/tests/fixtures/valid/: action-definition.nx  action-inheritance.nx  all-expressions.nx  braced-value-sequences.nx  complex-example.nx  complex_example.nx  component-abstract-external.nx  component-abstract.nx  component-emits-inherited-action.nx  component-emits-mixed.nx  component-emits-qualified-reference.nx  component-emits-reference.nx  component-emits.nx  component-extends.nx  component-external-state.nx  component-external.nx  component-full.nx  component-minimal.nx  component-state.nx  conditionals.nx  contenttype.nx  entities.nx  enum-definition.nx  escaped-braces.nx  expressions.nx  function.nx  function_definition.nx  import-named-aliased.nx  import-named.nx  import-namespace.nx  import-wildcard.nx  markup-interpolation.nx  module-with-definitions-and-element.nx  nested-elements.nx  nested_elements.nx  record-definition.nx  record-inheritance.nx  simple-element.nx  simple.nx  simple_element.nx  (+8 more)
crates/nx-syntax/tests/snapshots/: parser_tests__snapshot_error_diagnostics.snap  parser_tests__snapshot_error_diagnostics.snap.new  parser_tests__snapshot_function_definition.snap  parser_tests__snapshot_simple_element.snap.new  parser_tests__snapshot_union_definition.snap
crates/nx-syntax/tree-sitter-nx/src/: scanner.c
crates/nx-types/: Cargo.toml
crates/nx-types/src/: check.rs  env.rs  infer.rs  lib.rs  semantics.rs  ty.rs
crates/nx-types/tests/: debug_test.rs  memory_tests.rs  performance_tests.rs  type_checker_tests.rs
crates/nx-value/: Cargo.toml
docfx/: docfx.json
docfx/docs/: getting-started.md
docs/: README.md  astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  starlight.config.mjs
docs-site/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json
docs/contributing/: index.md
docs/overview/: comparison.md  design-goals.md  what-is-nx.md
docs/tutorials/: building-your-first-component.md  getting-started.md  working-with-design-tokens.md
examples/nx/: chat-link-config.nx  complex.nx  component.nx  conditionals.nx  embed.nx  expressions.nx  function.nx  hello.nx  loops.nx  playground.nx  simple.nx  (+2 more)
specs/: future.md
src/: AssemblyInfo.vb
tools/: dotnet-test-cloud.ps1  generate-nx-ffi-header.ps1  generate-nx-ffi-header.sh
(+398 files in other folders)
