[workspace]
resolver = "2"
members = [
    "crates/nx-diagnostics",
    "crates/nx-syntax",
    "crates/nx-hir",
    "crates/nx-types",
    "crates/nx-value",
    "crates/nx-api",
    "crates/nx-cli",
    "crates/nx-interpreter",
    "crates/nx-ffi",
]

[workspace.package]
version = "0.1.0"
authors = ["Bret Johnson"]
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/bret/nx"
homepage = "https://nx-lang.dev"

[workspace.dependencies]
# Error reporting
ariadne = "0.6"
text-size = "1.1"

# Parsing
tree-sitter = "0.25.10"

# Data structures
smol_str = "0.3.4"
la-arena = "0.3.1"
rustc-hash = "2.1.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"

# Incremental computation
salsa = "0.16"

# Testing
insta = { version = "1.34", features = ["yaml"] }

[profile.release]
lto = "thin"
codegen-units = 1
