[package]
name = "nx-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nx-diagnostics = { path = "../nx-diagnostics" }
nx-hir = { path = "../nx-hir" }
nx-interpreter = { path = "../nx-interpreter" }
nx-syntax = { path = "../nx-syntax" }
nx-value = { path = "../nx-value" }
serde.workspace = true
smol_str.workspace = true
rustc-hash.workspace = true
text-size.workspace = true
