[package]
name = "nx-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "nxlang"
path = "src/main.rs"

[dependencies]
nx-syntax = { path = "../nx-syntax" }
nx-hir = { path = "../nx-hir" }
nx-types = { path = "../nx-types" }
nx-diagnostics = { path = "../nx-diagnostics" }
nx-interpreter = { path = "../nx-interpreter" }
clap = { version = "4", features = ["derive"] }
smol_str = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
tempfile = "3"
