[package]
name = "nx-ffi"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nx-api = { path = "../nx-api" }
rmp-serde.workspace = true
serde_json.workspace = true

