[package]
name = "nx-ffi"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nx-api = { path = "../nx-api" }
nx-value = { path = "../nx-value" }
rmp-serde.workspace = true
serde_json.workspace = true
serde.workspace = true
base64 = "0.22"

[dev-dependencies]
nx-hir = { path = "../nx-hir" }
nx-interpreter = { path = "../nx-interpreter" }
nx-syntax = { path = "../nx-syntax" }
nx-types = { path = "../nx-types" }
nx-value = { path = "../nx-value" }
tempfile = "3"
