[package]
name = "nx-syntax"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tree-sitter.workspace = true
text-size.workspace = true

[dev-dependencies]
insta.workspace = true

[build-dependencies]
cc = "1.0"
