[package]
name = "nx-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nx-hir = { path = "../nx-hir" }
nx-syntax = { path = "../nx-syntax" }
nx-diagnostics = { path = "../nx-diagnostics" }
rustc-hash.workspace = true
salsa.workspace = true
la-arena.workspace = true

[dev-dependencies]
insta.workspace = true
